# backgamon

./: CMakeLists.txt  alt-build.sh  emergency_structure_restore.sh
Google_tests/: BoardTest.cpp  CMakeLists.txt  HistoryTest.cpp  MoveTest.cpp
include/: Board.h  History.h  Input.h  Leaderboard.h  ModalList.h  Move.h  Render.h  Save.h  State.h
src/: Board.c  History.c  Input.c  Leaderboard.c  ModalList.c  Move.c  Render.c  Save.c  State.c  main.c
